BlueGreenDeploymentUsingIstio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:			#or u can specify the host appname.namespace.k8sfqlfor the service
    - "myapp.demo.svc.cluster.local"
